// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseTrade 1`] = `
Object {
  "amount": 0.1198,
  "price": 630.17,
  "source": "GDAX",
  "sourceTimestamp": 1524739231228,
  "tradeId": 32872596,
  "tradeType": "sell",
}
`;

exports[`parseTrade 2`] = `
Object {
  "amount": 0.983,
  "price": 630.11,
  "source": "GDAX",
  "sourceTimestamp": 1524739231228,
  "tradeId": 32872595,
  "tradeType": "sell",
}
`;

exports[`parseTrade 3`] = `
Object {
  "amount": 0.2,
  "price": 630.11,
  "source": "GDAX",
  "sourceTimestamp": 1524739231228,
  "tradeId": 32872594,
  "tradeType": "sell",
}
`;
